Status icon safari fix v2 (#439)

--- a/src/components/StatusIcon/StatusIcon.module.scss
+++ b/src/components/StatusIcon/StatusIcon.module.scss
@@ -1,6 +1,7 @@
 .status-icon {
   display: flex;
   border-radius: 50%;
+  position: relative;
 
   &--active {
     padding: 0;
@@ -25,9 +26,12 @@
 
     i {
       color: $color-white;
-      font-size: 7px;
-      margin: auto;
-      margin-top: 2px;
+      font-size: 8px;
+      line-height: 8px;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
     }
   }
 
@@ -40,7 +44,11 @@
     i {
       color: $color-white;
       font-size: 0.75em;
-      margin: auto;
+      line-height: 0.75em;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
     }
   }
 
@@ -53,7 +61,11 @@
     i {
       color: $color-white;
       font-size: 0.75em;
-      margin: auto;
+      line-height: 0.75em;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
     }
   }
 }
